--- a/styles/helpers/variables.scss
+++ b/styles/helpers/variables.scss
@@ -3,6 +3,6 @@ $black: #030101;
 $red: #ff0000;
 
 $font-m: 'Montserrat';
-$font-e: 'Grenze';
+$font-g: 'Grenze';
 $ff-m: $font-m, sans-serif;
-$ff-e: $font-e, $font-m, sans-serif;
+$ff-g: $font-g, $font-m, sans-serif;
