--- a/styles/containers/container.scss
+++ b/styles/containers/container.scss
@@ -1,6 +1,7 @@
 .container {
-  display: flex;
   width: 100%;
   max-width: 1562px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
