--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -3,11 +3,24 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  cursor: pointer;
+  pointer-events: none;
+  &.active {
+    cursor: pointer;
+    pointer-events: initial;
+  }
 }
 
 .cover {
   position: relative;
+  height: 450px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.img {
+  z-index: 1;
+  position: relative;
+  transition: width 0.5s, height 0.5s, opacity 0.5s;
 }
 
 .coverImg {
@@ -19,8 +32,6 @@
 .activeCoverImg {
   width: 450px;
   height: 450px;
-  z-index: 1;
-  position: relative;
 }
 
 .plate {
@@ -29,19 +40,25 @@
   position: absolute;
   right: -40%;
   bottom: -5px;
-  // transform: translateX(50%);
   z-index: 0;
 }
 
 .textBlock {
-  position: absolute;
   bottom: -30px;
   left: 50%;
-  transform: translate(-50%, 100%);
+  // display: none;
+  transform: scale(0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 2;
+  opacity: 0;
+  transition: opacity 0.5s, transform 0.5s;
+
+  &.active {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .name {
