--- a/components/Concerts/Concerts.module.scss
+++ b/components/Concerts/Concerts.module.scss
@@ -7,6 +7,26 @@
   align-items: flex-end;
   justify-content: center;
   padding-bottom: 100px;
+
+  @include lg {
+    margin-top: -182px;
+    padding-bottom: 85px;
+  }
+  @include md {
+    margin-top: -80px;
+    padding-bottom: 60px;
+    height: 630px;
+  }
+  @include sm {
+    margin-top: -70px;
+    padding-bottom: 84px;
+    height: 650px;
+  }
+  @include xs {
+    height: 90vh;
+    padding-bottom: 60px;
+    padding-top: 100px;
+  }
 }
 
 .bg {
@@ -23,8 +43,8 @@
   height: 800px;
   padding: 100px 160px;
   background-color: $white;
-  background: url('../../assets/img/white-paper-modal.png') no-repeat center center;
-  background-size: cover;
+  background: url('../../assets/img/white-paper-modal.png') no-repeat;
+  background-size: 100% 100%;
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -32,7 +52,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+
+  @include lg {
+    height: 618px;
+    padding: 70px 120px;
+  }
+  @include md {
+    height: 434px;
+    padding: 48px 84px;
+  }
+  @include sm {
+    width: 86%;
+    height: 436px;
+    padding: 48px 64px;
+  }
+  @include xs {
+    width: 100%;
+    height: 100%;
+    padding: 40px 30px;
+  }
 }
 
 .arrow {
@@ -45,18 +83,61 @@
   &:disabled {
     opacity: 0.3;
   }
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+
+  @include lg {
+    width: 45px;
+    height: 45px;
+  }
+  @include md {
+    width: 28px;
+    height: 28px;
+  }
+  @include sm {
+    width: 21px;
+    height: 21px;
+  }
+  @include xs {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .arrowTop {
   top: 10px;
   transform: translateX(-50%);
+  @include lg {
+    top: 7px;
+  }
+  @include md {
+    top: 4px;
+  }
+  @include sm {
+    top: 8px;
+  }
 }
 
 .arrowBottom {
   bottom: 10px;
   transform: translateX(-50%) rotate(180deg);
+  @include lg {
+    bottom: 7px;
+  }
+  @include md {
+    bottom: 4px;
+  }
+  @include sm {
+    bottom: 8px;
+  }
 }
 
 .slider {
   width: 100%;
+
+  @include xs {
+    height: 100%;
+  }
 }
