--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -22,6 +22,12 @@
 .scroll {
   background: rgba($black, 0.3);
   backdrop-filter: blur(10px);
+
+  @include xs {
+    backdrop-filter: none;
+    background: rgba($black, 0.9);
+  }
+
   .logo > svg {
     fill: $red;
   }
@@ -30,6 +36,9 @@
     &::after {
       background-color: $red;
     }
+  }
+  .burgerMenu>div {
+    background-color: $red;
   }
 }
 
@@ -134,17 +143,42 @@
 .burgerMenu {
   display: none;
   width: 40px;
-  flex-direction: column;
-  gap: 6px;
-  align-items: center;
+  height: 11px;
+  position: absolute;
+  right: 18px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s;
 
   div {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
     height: 1.5px;
     width: 100%;
     background-color: $black;
+    transition: all 0.3s;
+
+    &:first-child {
+      top: 0;
+    }
   }
 
   @include xs {
-    display: flex;
+    display: block;
+  }
+
+  &.active {
+    width: 40px;
+    height: 40px;
+    div {
+      top: 50%;
+      transform: rotate(-45deg);
+
+      &:first-child {
+        transform: rotate(45deg);
+      }
+    }
   }
 }
