--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -20,7 +20,7 @@
 }
 
 .scroll {
-  background: rgba($black, 0.3);
+  background: rgba($black, 0.5);
   backdrop-filter: blur(10px);
 
   @include xs {
@@ -65,11 +65,25 @@
     height: auto;
   }
 
+  @include r(1562) {
+    left: 40px;
+  }
   @include lg {
+    left: 0;
     width: 74px;
   }
+  @include r(1162) {
+    left: 30px;
+  }
   @include md {
+    left: 0;
     width: 55px;
+  }
+  @include r(814) {
+    left: 30px;
+  }
+  @include sm {
+    left: 0;
   }
   @include xs {
     width: 66px;
