--- a/components/Participant/Participant.module.scss
+++ b/components/Participant/Participant.module.scss
@@ -4,12 +4,13 @@
   align-items: center;
 }
 
-.img {
+.imgWrapper {
   width: 230px;
   height: 230px;
   border-radius: 50%;
   object-fit: cover;
   filter: grayscale(100%);
+  overflow: hidden;
   transition: filter 0.3s;
 
   @include lg {
@@ -26,48 +27,73 @@
   }
 }
 
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .name {
   font-family: $ff-g;
   font-weight: 500;
   font-size: 36px;
   line-height: 53px;
   color: $red;
-  margin-top: 18px;
 
   @include lg {
     font-size: 26px;
     line-height: 38px;
-    margin-top: 14px;
   }
   @include md {
     font-size: 20px;
     line-height: 30px;
-    margin-top: 8px;
   }
   @include sm {
     font-size: 18px;
     line-height: 27px;
-    margin-top: 3px;
+  }
+
+  &__wrapper {
+    margin-top: 18px;
+
+    @include lg {
+      margin-top: 14px;
+    }
+    @include md {
+      margin-top: 8px;
+    }
+    @include sm {
+      margin-top: 3px;
+    }
   }
 }
 
 .link {
+  display: inline-block;
   font-size: 21px;
   line-height: 26px;
-  margin-top: 6px;
   color: $white;
 
   @include lg {
     font-size: 18px;
     line-height: 22px;
-    margin-top: 4px;
   }
   @include md {
     font-size: 14px;
     line-height: 17px;
-    margin-top: 2px;
   }
-  @include sm {
-    margin-top: 0;
+
+  &__wrapper {
+    margin-top: 6px;
+
+    @include lg {
+      margin-top: 4px;
+    }
+    @include md {
+      margin-top: 2px;
+    }
+    @include sm {
+      margin-top: 0;
+    }
   }
 }
