--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -4,9 +4,17 @@
   align-items: center;
   position: relative;
   pointer-events: none;
+  // opacity: 0;
+  // transition: opacity 0.5s ease-out;
+  // transition-delay: 1s;
+
   &.active {
     cursor: pointer;
     pointer-events: initial;
+  }
+
+  &.visible {
+    opacity: 1;
   }
 }
 
@@ -34,12 +42,18 @@
   z-index: 1;
   position: relative;
   transition: width 0.5s, height 0.5s, opacity 0.5s;
+
+  &.invisible {
+    width: 0;
+    height: 0;
+  }
 }
 
 .coverImg {
   width: 300px;
   height: 300px;
   opacity: 0.35;
+
 
   @include lg {
     width: 224px;
@@ -102,6 +116,10 @@
   &.active {
     opacity: 1;
     transform: scale(1);
+  }
+
+  &.invisible {
+    opacity: 0;
   }
 
   @include sm {
