--- a/components/Concert/Concert.module.scss
+++ b/components/Concert/Concert.module.scss
@@ -182,6 +182,8 @@
   border-color: $black;
   margin-block: 0;
   border-style: solid;
+  border-left-width: 0;
+  border-right-width: 0;
 
   @include lg {
     border-top-width: 0px;
