--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -33,6 +33,9 @@
     font-weight: 500;
     color: #ff0000;
   }
+  &__wrapper {
+    overflow: hidden;
+  }
 
   @include lg {
     font-size: 16px;
@@ -127,6 +130,8 @@
   margin-block: 0;
   border-style: solid;
   border-bottom: none;
+  border-left: none;
+  border-right: none;
   border-top-width: 1.5px;
 
   @include lg {
