--- a/components/Gallery/Gallery.module.scss
+++ b/components/Gallery/Gallery.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 70vh;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,6 +37,12 @@
   width: 100%;
   height: 100%;
   position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .btn {
