--- a/components/HeroSection/HeroSection.module.scss
+++ b/components/HeroSection/HeroSection.module.scss
@@ -56,6 +56,12 @@
     width: 214px;
     height: 95px;
   }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .bg {
@@ -66,4 +72,10 @@
   top: 0;
   z-index: 0;
   overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
