feat: add seo optimization

--- a/components/Concert/Concert.module.scss
+++ b/components/Concert/Concert.module.scss
@@ -172,7 +172,8 @@
     display: none;
   }
 
-  &.disable {
+  &.disable,
+  &:disabled {
     pointer-events: none;
     background-color: rgba($black, 0.0);
     color: rgba($white, 0);
