--- a/components/Preloader/Preloader.module.scss
+++ b/components/Preloader/Preloader.module.scss
@@ -91,14 +91,14 @@
   }
 }
 
-.c {
-  font-size: 250px;
-  z-index: 7;
+// .c {
+//   font-size: 250px;
+//   z-index: 7;
 
-  @include xs {
-    font-size: 230px;
-  }
-}
+//   @include xs {
+//     font-size: 230px;
+//   }
+// }
 
 .y {
   font-size: 230px;
