fix: update ticker, hide concerts section if data is empty

--- a/components/Ticker/Ticker.module.scss
+++ b/components/Ticker/Ticker.module.scss
@@ -37,6 +37,7 @@
   line-height: 113px;
   text-transform: uppercase;
   user-select: none;
+  white-space: nowrap;
 
   &:nth-child(even) {
     color: $black;
